--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Poppins&display=swap" rel="stylesheet">
 
-
     <link rel="stylesheet" href="style.css">
 
   </head>
   <body>
+    <!-- main -->
     <div class="main_box">
       <input type="checkbox" id="check" />
       <div class="btn_one">
